<resources>
    <string name="app_name">Gifs_Watcher</string>
    <string name="title_friends">Friends</string>
    <string name="title_menu">Home</string>
    <string name="title_profil">Profil</string>
    <string name="background_description">Une loutre</string>

    <!-- Strings related to login -->
    <string name="login_title">SIGN IN</string>
    <string name="login_identifiant">Username / Mail</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot Password ?</string>
    <string name="login_register">Don\'t have any account ? Create one</string>
    <string name="login_button">"Sign In"</string>
    <string name="login_invalid_username">Not a valid username</string>
    <string name="login_invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to register -->
    <string name="register_title">SIGN UP</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_birthday">Birthday</string>
    <string name="register_login">Already have an account ? Log in</string>
    <string name="register_button">"Sign Up"</string>
    <string name="register_invalid_username">Not a valid username</string>
    <string name="register_invalid_password">Password must be >5 characters</string>
    <string name="register_failed">"Register failed"</string>

    <!-- Strings related to forgot password -->
    <string name="password_title">FORGOT PASSWORD</string>
    <string name="password_desc">Send an Email to reset your password.</string>
    <string name="password_email">Email</string>
    <string name="password_login">Do you remember your password ? Log in</string>
    <string name="password_button">"Send Email"</string>
    <string name="password_invalid_email">Not a valid email</string>
    <string name="password_failed">"Register failed"</string>

    <!-- Strings related to addFriendPopUp -->
    <string name="addFriendPopUp_title">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple_signin">Apple Signin</string>
    <string name="facebook_signin">Facebook Signin</string>
    <string name="google_signin">Google Signin</string>
    <string name="no_biography">No biography</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="remove">Remove</string>
    <string name="qr_code">QR CODE</string>
    <string name="code">CODE</string>
    <string name="save_the_qr_code">Save the QR Code</string>
    <string name="delete">Delete</string>
</resources>