<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modal_fragment_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="invisible"
    android:background="@android:color/transparent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:layout_constraintBottom_toBottomOf="parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modal_fragment_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_signin"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password_title"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textColor="@color/md_theme_dark_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/password_separator_view"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/md_theme_dark_onSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_title"
            />

        <TextView
            android:id="@+id/password_desc"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="24dp"
            android:text="@string/password_desc"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_dark_onBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_separator_view"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_identifiant_textinput"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password_email"
            android:textColorHint="@color/md_theme_dark_onSurface"
            android:theme="@style/EditTextTheme"
            app:hintTextAppearance="@style/EditTextThemeLayout"
            app:startIconDrawable="@drawable/identidiant_icon"
            app:startIconMinSize="30dp"
            app:startIconTint="@color/md_theme_dark_onSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_dark_surfaceVariant"
                android:textColorHint="@color/md_theme_dark_onSurfaceVariant"
                android:textColor="@color/md_theme_dark_onSurface"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/password_signin_button"
            android:layout_width="165dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/md_theme_dark_primaryContainer"
            android:text="@string/password_button"
            android:textSize="17sp"
            android:textColor="@color/md_theme_dark_onPrimaryContainer"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_identifiant_textinput"
            />

        <View
            android:id="@+id/password_separator_view2"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@color/md_theme_dark_onSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_signin_button"
            />

        <TextView
            android:id="@+id/password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_separator_view2"
            android:text="@string/password_login"
            android:textColor="@color/md_theme_dark_primary"
            android:textSize="16sp"
            />

        <View
            android:id="@+id/password_separator_view3"
            android:layout_width="300dp"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:background="@color/md_theme_dark_onSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
