<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SharedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.main.qrcode.ShareGifFragment"
        android:background="@color/md_theme_dark_background"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backFromShareToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/md_theme_dark_surfaceVariant"
            android:src="@drawable/back"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/md_theme_dark_onBackground" />

        <TextView
            android:id="@+id/share_title_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/qr_code"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textColor="@color/md_theme_dark_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/share_separator_view"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/md_theme_dark_onSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_title_qr"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/share_option_layout"
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/on_surface_round_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_separator_view">

            <ImageView
                android:id="@+id/share_option_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <View
                android:id="@+id/share_option_separator_view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/md_theme_dark_onBackground"
                app:layout_constraintEnd_toEndOf="@+id/share_option_image"
                app:layout_constraintStart_toStartOf="@+id/share_option_image"
                app:layout_constraintTop_toBottomOf="@+id/share_option_image"
                />

            <TextView
                android:id="@+id/share_option_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Gif Title"
                android:textColor="@color/md_theme_dark_onBackground"
                android:textSize="21dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/share_option_image"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/share_title_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/code"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
            android:textColor="@color/md_theme_dark_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_option_layout" />

        <View
            android:id="@+id/share_separator2_view"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/md_theme_dark_onSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_title_code"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/share_code_textinput_layout"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:theme="@style/EditTextTheme"
            app:hintTextAppearance="@style/EditTextThemeLayout"
            app:startIconDrawable="@drawable/hashtag"
            app:startIconMinSize="20dp"
            app:startIconTint="@color/md_theme_dark_onSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_separator2_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/share_code_textinput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/md_theme_dark_surfaceVariant"
                android:textColorHint="@color/md_theme_dark_onSurfaceVariant"
                android:textColor="@color/md_theme_dark_onSurface"
                android:inputType="text|date"
                android:textSize="26sp"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/share_code_button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:backgroundTint="@color/md_theme_dark_primaryContainer"
            android:text="@string/save_the_qr_code"
            android:textSize="17sp"
            android:textColor="@color/md_theme_dark_onPrimaryContainer"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_code_textinput_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>